# drift-python-sdk

./: .dockerignore  .envrc  .gitignore  BENCHMARKS.md  CONTRIBUTING.md  E2E_TESTING_GUIDE.md  MANIFEST.in  README.md  docker-compose.test.yml  flake.nix  index.html  instrumentation-manifest.json  pyproject.toml  requirements.txt  run-all-benchmarks.sh  run-all-e2e-tests.sh
.claude/commands/: bug-hunt.md
.cursor/: BUGBOT.md
.github/workflows/: benchmarks.yml  ci.yml  e2e.yml  publish-python-sdk.yml  tusk-test-runner-pytest-unit-tests.yml
.tusk/: config.yaml
benchmarks/: .gitignore  PROFILING.md  README.md  compare_benchmarks.py  run_benchmarks.sh
benchmarks/bench/: __init__.py  common.py  fixed_qps_latency.py  realistic_workload.py  resource_monitor.py  result_utils.py  sdk_active.py  sdk_active_with_transforms.py  sdk_disabled.py  sdk_sampling_rates.py
benchmarks/profile/: .gitignore  profile.sh  simple_profile.py
benchmarks/scripts/: compare_runs.py
benchmarks/server/: __init__.py  test_server.py
benchmarks2/: README.md  app.py  benchmark.py  delay_server.py  run_benchmark.sh
docs/: context-propagation.md  coverage.md  environment-variables.md  initialization.md  quickstart.md  rust-core-bindings.md
drift/: __init__.py  version.py
drift/core/: __init__.py  adaptive_sampling.py  batch_processor.py  config.py  content_type_utils.py  types.py  (+15 more)
scripts/: generate_manifest.py  plot_sampling_benchmarks.py  release.sh
tests/: __init__.py  conftest.py  test_adapters.py  test_fastapi_demo.py  test_flask_demo.py  test_span_serialization.py  test_transform_engine.py
(+276 files in other folders)
