[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tusk-drift-python-sdk"
version = "0.1.0"
description = "Python SDK for Tusk Drift instrumentation and replay"
readme = "README.md"
requires-python = ">=3.12"
license = {text = "MIT"}
authors = [
    {name = "Tusk", email = "support@usetusk.ai"}
]
keywords = ["tusk", "drift", "testing", "instrumentation", "tracing", "replay"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Testing",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

dependencies = [
    "protobuf>=6.0",
    "PyYAML>=6.0",
    "requests>=2.32.5",
    "tusk-drift-schemas>=0.1.9",
    "aiohttp>=3.9.0",
    "aiofiles>=23.0.0",
]

[project.optional-dependencies]
flask = ["Flask>=3.1.2"]
fastapi = ["fastapi>=0.115.6", "uvicorn>=0.34.2", "starlette<0.42.0"]
dev = [
    "Flask>=3.1.2",
    "fastapi>=0.115.6",
    "uvicorn>=0.34.2",
    "python-jsonpath>=0.10",
]

[project.urls]
Homepage = "https://usetusk.ai"
Documentation = "https://docs.usetusk.ai"
Repository = "https://github.com/Use-Tusk/drift-node-sdk"
Issues = "https://github.com/Use-Tusk/drift-node-sdk/issues"

[tool.setuptools]
packages = ["drift"]

[tool.setuptools.package-data]
drift = ["py.typed"]
